assets/sass/style.sass
{{- $fonts    := site.Params.fonts }}
{{- $fontSlice := (slice) }}
{{- range $fonts }}
{{- $fontSlice = $fontSlice | append (printf "%s:%s" (replace .name " " "+") (delimit .sizes ",")) }}
{{- end }}
{{- $fontsUrl := printf "https://fonts.googleapis.com/css?family=%s" (delimit $fontSlice "|") }}
{{- $sansSerifFont := (index (where site.Params.fonts ".type" "sans_serif") 0).name }}
{{- $monospaceFont := (index (where site.Params.fonts ".type" "monospace") 0).name }}
{{- $fontAwesomeVersion := site.Params.fontawesomeversion }}
{{- $fontAwesomeUrl     := printf "https://use.fontawesome.com/releases/v%s/css/all.css" $fontAwesomeVersion }}

@charset "utf-8"
@import url({{ $fontsUrl }})
@import url({{ $fontAwesomeUrl }})

// Site-specific variables
$nsm-red: #f12711
$nsm-dark-orange: #f34b13
$nsm-light-orange: #f37914
$nsm-dark-blue: #0a50e6
$nsm-light-blue: #0da9eb
$twitter-blue: rgb(29, 161, 242)

@import "bulma/sass/utilities/initial-variables"
@import "bulma/sass/utilities/functions"

// Bulma variable overrides
$primary: $nsm-dark-blue
$secondary: $nsm-red
$orange: $nsm-dark-orange
$link: $orange
$link-weight: 700
$navbar-height: 4rem
$navbar-item-img-max-height: $navbar-height * 0.8
$family-sans-serif: "{{ $sansSerifFont }}", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
$family-monospace: "{{ $monospaceFont }}", monospace
$tabs-border-bottom-width: 2px
$tabs-link-padding: .7rem 1.1rem
$code: $orange
$code-background: $white-bis

@import "bulma/sass/utilities/derived-variables"

$colors: mergeColorMaps(("twitter-blue": ($twitter-blue, $white), "orange": ($orange, $white)), $colors)
$tabs-link-active-color: $dark
$tabs-link-active-border-bottom-color: $dark

@import "bulma/bulma"

// Site-specific logic
@import "variables"
@import "helpers"
@import "page"
@import "docs"

.is-borderless
  border: none !important
  border-radius: none

.content
  li
    list-style-type: square

hr.thick
  background-color: $nsm-light-blue
  //margin: 3rem auto
  height: 2px

  &.light-orange
    background-color: $nsm-dark-orange

.bump-right
  margin-right: 1rem

.is-hero-logo
  +desktop
    width: 50%

  +touch
    width: 50%

// Bulma Divider variable overrides
$divider-font-size: $size-1

@import "bulma-divider/src/sass/index"

// Used to properly align sponsor_section.html shortcode dividers with 3em font size
.is-divider[data-content]::after
  -webkit-transform: translateY(-2.6rem)
  -ms-transform: translateY(-2.6rem)
  transform: translateY(-2.6rem)

